alignment issue fix

--- a/style.css
+++ b/style.css
@@ -621,7 +621,7 @@ opacity: 0.6;
 .form-group input,.form-group textarea{
   background-color: transparent;
   border: none;
-  width: 100%;
+  width: 80%;
   border-bottom: 1px solid rgba(255, 255, 255, 0.07);
   padding: 1.5rem 0;
 }
